# counting-down-backend-fastapi

./: .coverage  .env.example  .gitignore  .justfile  README.md  pyproject.toml
.github/workflows/: deploy.yml  dev.yml
app/: dependencies.py  main.py  middleware.py
app/api/: routing.py
app/api/v1/: __init__.py  advent.py  airport.py  auth.py  error_handlers.py  flight.py  flight_lookup.py  image.py  mediation.py  message.py  routes.py  schemas.py  todo.py  todos.py  together_list.py
app/core/: auth.py  config.py  exceptions.py  logging.py
app/data/: airports.json
app/db/: client.py  dependencies.py  deps.py  mongo_client.py  s3_client.py
app/db/interfaces/: mongo.py  s3.py
app/integrations/: aerodatabox_client.py  openai_client.py
app/models/: db.py  flight.py  image.py  mongo.py  s3.py  todo.py  todo_item.py  together_list_item.py
app/prompts/: mediation_prompts.py
app/repositories/: advent.py  airport.py  dependencies.py  flight.py  image.py  image_metadata.py  mediation.py  message.py  session.py  todo.py  todos.py  together_list.py
app/schemas/: todo.py
app/schemas/v1/: advent.py  airport.py  base.py  exceptions.py  flight.py  flight_lookup.py  health.py  image.py  image_metadata.py  mediation.py  message.py  response.py  session.py  todo.py  user.py
app/services/: __init__ .py  advent.py  airport.py  auth.py  dependencies.py  deps.py  flight.py  flight_lookup.py  image.py  mediation.py  mediation_ai.py  mediation_safety.py  message.py  todo.py  todos.py  together_list.py  user.py
app/util/: crypto.py  flight.py  image.py  mongo.py  user.py
app/workers/: mediation_worker.py
docs/: current_todos.md
scripts/: get_mediation_job.py  requeue_mediation_job.py  seed_airports.py
tests/: README.md  conftest.py
tests/v1/: conftest.py  test_airports_integration.py  test_airports_unit.py  test_cors.py  test_flight_lookup_unit.py  test_health.py  test_mediation_unit.py  test_openai_client.py  test_todo_response_alias.py  test_todos.py  test_todos_integration.py  test_todos_unit.py
