[project]
name = "counting-down-backend"
version = "0.1.0"
description = "A backend service for the counting down website for D and me."
authors = [{ name = "Joris Lodewijks", email = "info@jorislodewijks.nl" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]",
  "pydantic>=2.7",
  "pydantic-settings>=2.5",
  "motor>=3.7.1",
  "pytest-cov>=7.0.0",
  "pytest-asyncio>=1.2.0",
  "boto3>=1.41.3",
  "types-boto3[s3]>=1.41.3",
  "pillow>=12.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "mypy>=1.18",
  "httpx>=0.27",
  "anyio>=4.0",
  "pytest-asyncio>=0.23",
  "freezegun>=1.5.5",
  "ruff>=0.14.4",
]
lint = ["ruff>=0.6"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = ["*.pyi"]
lint.select = ["E", "F", "I", "UP", "B"]
lint.ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
plugins = "pydantic.mypy"

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
strict_equality = true

exclude = ["tests/"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
